pipeline-argocd/triggers/eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: petclinic-event-listener
  name: el-petclinic-event-listener
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-petclinic-event-listener
    weight: 100
